# dayan-system

./: .gitignore
agent-collab-system/backend/python-agent-service/: README.md  pyproject.toml
agent-collab-system/backend/python-agent-service/app/: __init__.py  main.py
agent-collab-system/backend/python-agent-service/app/api/: router.py
agent-collab-system/backend/python-agent-service/app/api/v1/: approvals.py  auth.py  chat.py  executions.py  monitor.py  records.py  workflows.py
agent-collab-system/backend/python-agent-service/app/core/: __init__.py  config.py  deps.py  errors.py  logging.py  security.py
agent-collab-system/backend/python-agent-service/app/db/: bootstrap_workflows.py  session.py
agent-collab-system/backend/python-agent-service/app/db/migrations/: README.md
agent-collab-system/backend/python-agent-service/app/db/models/: __init__.py  approval.py  audit.py  chat.py  execution.py  memory.py  workflow.py
agent-collab-system/backend/python-agent-service/app/domain/: __init__.py
agent-collab-system/backend/python-agent-service/app/domain/approvals/: __init__.py  models.py  repository.py  service.py
agent-collab-system/backend/python-agent-service/app/domain/auth/: directory.py  token_service.py
agent-collab-system/backend/python-agent-service/app/runtime/: __init__.py  dispatcher.py  graph_builder.py  models.py
agent-collab-system/backend/python-agent-service/app/schemas/: approval.py  auth.py  chat.py  event.py  execution.py  monitor.py  sensor_metadata.py  workflow.py
agent-collab-system/frontend/: index.html  package-lock.json  (+3 more)
(+331 files in other folders)
